@@ -23,6 +23,7 @@
 - fix out of order call in program map lookup.
 - fix error handling of is_mounted().
 - Add a mode option for master map entries.
+- define monotonic clock helper functions.
 
 21/04/2015 autofs-5.1.1
 =======================
